Fixed bug with overlapping layers

--- a/public/app.css
+++ b/public/app.css
@@ -14,6 +14,7 @@
           box-shadow: 1px 2px 5px 0px rgba(8,48,8,0.25);
   font-size: 14px;
   border-bottom: 2px solid #888;
+  z-index: 1000;
 }
 
 .controls ul {
@@ -108,17 +109,22 @@
  * CONTROL BUS WIRE
  ******************************************************************************/
 
+.data-plug {
+  z-index: 800;
+}
 .control-plug {
   position: absolute;
   border: 5px solid #222;
   border-radius: 50%;
   width: 0px;
   height: 0px
+  z-index: 800;
 }
 .control-wire-outer {
   position: absolute;
   width: 1px;
   height: 1px;
+  z-index: 801;
 }
 .control-wire-inner {
   border: 2px solid #222;
